--- a/sites/all/themes/localknowtion/css/normalize.css
+++ b/sites/all/themes/localknowtion/css/normalize.css
@@ -338,14 +338,14 @@ ul ul {
   margin: 0;
 }
 dd {
-  margin: 0 0 0 30px;
+  margin: 0 0 0 30px; /* LTR */
 }
 
 /* Address paddings set differently in IE 6/7. */
 menu,
 ol,
 ul {
-  padding: 0 0 0 30px;
+  padding: 0 0 0 30px; /* LTR */
 }
 
 /* Correct list images handled incorrectly in IE 7. */
@@ -410,7 +410,7 @@ fieldset {
 legend {
   border: 0; /* 1 */
   padding: 0; /* 2 */
-  *margin-left: -7px; /* 3 */
+  *margin-left: -7px; /* 3 */ /* LTR */
 }
 
 /**
