Reverting to older version of Zen

--- a/sites/all/themes/localknowtion/sass/styles.scss
+++ b/sites/all/themes/localknowtion/sass/styles.scss
@@ -20,6 +20,9 @@
 // Optionally, add your own components here.
 @import "print";
 
+
+@import "custom/custom";
+
 /* SMACSS theme rules */
 /* @import "theme-A"; */
 /* @import "theme-B"; */
