Small changes to CSS for temp signup page

--- a/sites/all/themes/localknowtion/sass/custom/_custom.scss
+++ b/sites/all/themes/localknowtion/sass/custom/_custom.scss
@@ -5,5 +5,11 @@
 }
 
 #page-title {
-  color: red;
+  color: #DB0B04;
+  font-family: 'Bree Serif';
+}
+
+label {
+  font-family: 'Arial';
+  font-size: 14px;
 }
