--- a/sites/all/themes/localknowtion/css/styles.css
+++ b/sites/all/themes/localknowtion/css/styles.css
@@ -1,92 +1,3 @@
-<<<<<<< HEAD
-/*
-Error: File to import not found or unreadable: base/fonts.
-       Load paths:
-         Compass::SpriteImporter
-         /Applications/MAMP/htdocs/localknowtion/sites/all/themes/localknowtion/sass
-         /Library/Ruby/Gems/1.8/gems/compass-core-1.0.3/stylesheets
-         /Applications/MAMP/htdocs/localknowtion/sites/all/themes/localknowtion/sass-extensions/zen-grids/stylesheets
-        on line 17 of /Applications/MAMP/htdocs/localknowtion/sites/all/themes/localknowtion/sass/styles.scss
-
-12: // These are the base styles applied to HTML elements.
-13: //
-14: // Styleguide: base
-15: 
-16: // Ensure fonts get loaded first to minimize front-end performance impact.
-17: @import 'base/fonts';
-18: @import 'base/**';
-19: 
-20: // Layouts
-21: //
-22: // The layout styling for major parts of the page that are included with the
-
-Backtrace:
-/Applications/MAMP/htdocs/localknowtion/sites/all/themes/localknowtion/sass/styles.scss:17
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/import_node.rb:66:in `import'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/import_node.rb:28:in `imported_file'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/import_node.rb:37:in `css_import?'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `send'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:167:in `visit_children'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `send'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:8:in `send'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/tree/root_node.rb:20:in `render'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/engine.rb:268:in `render'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:215:in `update_stylesheets'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:328:in `watch'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:290:in `initialize_adapter'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `call'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:254:in `report_changes'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:323:in `poll_changed_directories'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:299:in `start_poller'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:299:in `initialize'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:299:in `new'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:299:in `start_poller'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:101:in `start'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/adapter.rb:109:in `start!'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/vendor/listen/lib/listen/listener.rb:66:in `start!'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:405:in `listen_to'
-/Library/Ruby/Gems/1.8/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:338:in `watch'
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/lib/compass/sass_compiler.rb:46:in `watch!'
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/lib/compass/commands/watch_project.rb:41:in `perform'
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/lib/compass/commands/base.rb:18:in `execute'
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/lib/compass/commands/project_base.rb:19:in `execute'
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/bin/compass:30
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/bin/compass:44:in `call'
-/Library/Ruby/Gems/1.8/gems/compass-1.0.3/bin/compass:44
-/usr/bin/compass:19:in `load'
-/usr/bin/compass:19
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: base/fonts.\A        Load paths:\A          Compass::SpriteImporter\A          /Applications/MAMP/htdocs/localknowtion/sites/all/themes/localknowtion/sass\A          /Library/Ruby/Gems/1.8/gems/compass-core-1.0.3/stylesheets\A          /Applications/MAMP/htdocs/localknowtion/sites/all/themes/localknowtion/sass-extensions/zen-grids/stylesheets\A         on line 17 of /Applications/MAMP/htdocs/localknowtion/sites/all/themes/localknowtion/sass/styles.scss\A \A 12: // These are the base styles applied to HTML elements.\A 13: //\A 14: // Styleguide: base\A 15: \A 16: // Ensure fonts get loaded first to minimize front-end performance impact.\A 17: @import 'base/fonts';\A 18: @import 'base/**';\A 19: \A 20: // Layouts\A 21: //\A 22: // The layout styling for major parts of the page that are included with the"; }
-=======
 /**
  * @file
  * Styles are organized using the SMACSS technique. @see http://smacss.com/book/
@@ -1886,10 +1797,16 @@ tr.selected td {
 
 /* line 7, ../sass/custom/_custom.scss */
 #page-title {
-  color: red;
+  color: #DB0B04;
+  font-family: 'Bree Serif';
+}
+
+/* line 12, ../sass/custom/_custom.scss */
+label {
+  font-family: 'Arial';
+  font-size: 14px;
 }
 
 /* SMACSS theme rules */
 /* @import "theme-A"; */
 /* @import "theme-B"; */
->>>>>>> zentest
