--- a/sites/all/themes/localknowtion/sass/custom/_custom.scss
+++ b/sites/all/themes/localknowtion/sass/custom/_custom.scss
@@ -13,3 +13,8 @@ label {
   font-family: 'Arial';
   font-size: 14px;
 }
+
+.form-item-mergevars-MMERGE4 input,
+.form-item-mergevars-MMERGE3 input {
+  width: 600px;
+}
