--- a/sites/all/themes/chalkboard/css/styles.css
+++ b/sites/all/themes/chalkboard/css/styles.css
@@ -1763,6 +1763,18 @@ tr.selected td {
     display: none;
   }
 }
+/* line 1, ../sass/custom/_header.scss */
+#header_region {
+  background-color: grey;
+}
+
+/* line 5, ../sass/custom/_header.scss */
+#header {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+}
+
 /* SMACSS theme rules */
 /* @import "theme-A"; */
 /* @import "theme-B"; */
