--- a/sites/all/themes/chalkboard/sass/styles.scss
+++ b/sites/all/themes/chalkboard/sass/styles.scss
@@ -19,6 +19,8 @@
 @import "components/misc";
 // Optionally, add your own components here.
 @import "print";
+@import "custom/custom";
+@import "custom/header";
 
 /* SMACSS theme rules */
 /* @import "theme-A"; */
