--- a/sites/all/themes/chalkboard/css/styles.css
+++ b/sites/all/themes/chalkboard/css/styles.css
@@ -850,6 +850,38 @@ table {
     margin-left: 80%;
     margin-right: -100%;
   }
+
+  /* line 213, ../sass/layouts/_responsive.scss */
+  #block-menu-menu-learn-even-more {
+    float: left;
+    width: 25%;
+    margin-left: 75%;
+    margin-right: -100%;
+  }
+
+  /* line 216, ../sass/layouts/_responsive.scss */
+  #block-menu-menu-how-to-contribute {
+    float: left;
+    width: 25%;
+    margin-left: 50%;
+    margin-right: -75%;
+  }
+
+  /* line 219, ../sass/layouts/_responsive.scss */
+  #block-menu-menu-getting-started {
+    float: left;
+    width: 25%;
+    margin-left: 0%;
+    margin-right: -25%;
+  }
+
+  /* line 222, ../sass/layouts/_responsive.scss */
+  #block-menu-menu-resources {
+    float: left;
+    width: 25%;
+    margin-left: 25%;
+    margin-right: -50%;
+  }
 }
 /* Component (SMACSS module) rules */
 /**
