--- a/sites/all/themes/chalkboard/sass/layouts/_responsive.scss
+++ b/sites/all/themes/chalkboard/sass/layouts/_responsive.scss
@@ -207,4 +207,20 @@ $zen-auto-include-item-base: false;
       @include zen-grid-item(1, 5);
     }
   }
+
+  $zen-column-count: 4;
+
+  #block-menu-menu-learn-even-more {
+    @include zen-grid-item(1, 4);
+  }
+  #block-menu-menu-how-to-contribute {
+    @include zen-grid-item(1, 3);
+  }
+  #block-menu-menu-getting-started {
+    @include zen-grid-item(1, 1);
+  }
+  #block-menu-menu-resources {
+    @include zen-grid-item(1, 2);
+  }
+
 }
