--- a/sites/all/themes/chalkboard/css/styles.css
+++ b/sites/all/themes/chalkboard/css/styles.css
@@ -1815,21 +1815,24 @@ tr.selected td {
   color: white;
   padding-top: 2%;
   padding-bottom: 2%;
+  font-family: 'Architects Daughter';
 }
 
-/* line 8, ../sass/custom/_header.scss */
+/* line 9, ../sass/custom/_header.scss */
 .header__site-link:link,
 .header__site-link:visited {
   color: white;
+  font-family: 'Architects Daughter';
 }
 
-/* line 13, ../sass/custom/_header.scss */
+/* line 15, ../sass/custom/_header.scss */
 .header__site-link:hover {
   color: yellow;
   text-decoration: none;
+  font-family: 'Architects Daughter';
 }
 
-/* line 18, ../sass/custom/_header.scss */
+/* line 21, ../sass/custom/_header.scss */
 #header {
   margin-left: auto;
   margin-right: auto;
