--- a/sites/all/themes/chalkboard/sass/custom/_header.scss
+++ b/sites/all/themes/chalkboard/sass/custom/_header.scss
@@ -3,16 +3,19 @@
   color: white;
   padding-top: 2%;
   padding-bottom: 2%;
+  font-family: 'Architects Daughter';
 }
 
 .header__site-link:link, 
 .header__site-link:visited {
     color: white;
+    font-family: 'Architects Daughter';
 }
 
 .header__site-link:hover {
     color: yellow;
     text-decoration: none;
+    font-family: 'Architects Daughter';
 }
 
 #header {
