--- a/sites/all/themes/chalkboard/css/styles.css
+++ b/sites/all/themes/chalkboard/css/styles.css
@@ -1809,6 +1809,11 @@ tr.selected td {
   margin: 0;
 }
 
+/* line 14, ../sass/custom/_custom.scss */
+#main {
+  max-width: 1000px;
+}
+
 /* line 1, ../sass/custom/_header.scss */
 #header_region {
   background-image: url("../images/chalk.jpg");
@@ -1817,26 +1822,25 @@ tr.selected td {
   padding-bottom: 2%;
   font-family: 'Architects Daughter';
 }
-
-/* line 9, ../sass/custom/_header.scss */
-.header__site-link:link,
-.header__site-link:visited {
+/* line 7, ../sass/custom/_header.scss */
+#header_region a:link,
+#header_region a:visited {
   color: white;
+  text-decoration: none;
   font-family: 'Architects Daughter';
 }
-
-/* line 15, ../sass/custom/_header.scss */
-.header__site-link:hover {
+/* line 13, ../sass/custom/_header.scss */
+#header_region a:hover {
   color: yellow;
   text-decoration: none;
   font-family: 'Architects Daughter';
 }
 
-/* line 21, ../sass/custom/_header.scss */
+/* line 22, ../sass/custom/_header.scss */
 #header {
   margin-left: auto;
   margin-right: auto;
-  max-width: 1200px;
+  max-width: 1000px;
 }
 
 /* SMACSS theme rules */
