Editing CSS for footer

--- a/sites/all/themes/chalkboard/sass/_init.scss
+++ b/sites/all/themes/chalkboard/sass/_init.scss
@@ -94,6 +94,14 @@ $font-monospace:   $courier;
 // Colors, etc.
 //
 
+$chalk-grey:   #A2A6A1;
+$chalk-light:  #D9DBD9;
+$chalk-red:    #E76341;
+$chalk-green:  #DEF4E8;
+$chalk-board:  #423D41;
+$chalk-yellow: #FFAD00;
+
+
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
 
