--- a/sites/all/themes/chalkboard/css/styles.css
+++ b/sites/all/themes/chalkboard/css/styles.css
@@ -1791,6 +1791,53 @@ tr.selected td {
     display: none;
   }
 }
+/* line 1, ../sass/custom/_header.scss */
+#header-region {
+  background-color: #A2A6A1;
+}
+
+/* line 5, ../sass/custom/_header.scss */
+#header {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* line 1, ../sass/custom/_overall.scss */
+body {
+  font-family: 'Nunito';
+  color: #423D41;
+}
+
+/* line 1, ../sass/custom/_footer.scss */
+#footer-region {
+  background-color: #A2A6A1;
+}
+
+/* line 5, ../sass/custom/_footer.scss */
+#footer {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+}
+/* line 10, ../sass/custom/_footer.scss */
+#footer a:link {
+  color: #D9DBD9;
+}
+/* line 13, ../sass/custom/_footer.scss */
+#footer a:visited {
+  color: #D9DBD9;
+}
+/* line 16, ../sass/custom/_footer.scss */
+#footer a:hover {
+  color: white;
+}
+/* line 19, ../sass/custom/_footer.scss */
+#footer li a:link, #footer li a:visited {
+  font-weight: 100;
+}
+
 /* SMACSS theme rules */
 /* @import "theme-A"; */
 /* @import "theme-B"; */
