--- a/sites/all/themes/chalkboard/sass/styles.scss
+++ b/sites/all/themes/chalkboard/sass/styles.scss
@@ -19,6 +19,9 @@
 @import "components/misc";
 // Optionally, add your own components here.
 @import "print";
+@import "custom/header";
+@import "custom/overall";
+@import "custom/footer";
 
 /* SMACSS theme rules */
 /* @import "theme-A"; */
