--- a/sites/all/themes/chalkboard/sass/styles.scss
+++ b/sites/all/themes/chalkboard/sass/styles.scss
@@ -20,6 +20,7 @@
 // Optionally, add your own components here.
 @import "print";
 @import "custom/header";
+@import "custom/page";
 @import "custom/overall";
 @import "custom/footer";
 
