--- a/sites/all/themes/chalkboard/sass/custom/_overall.scss
+++ b/sites/all/themes/chalkboard/sass/custom/_overall.scss
@@ -2,3 +2,9 @@ body {
   font-family: 'Nunito';
   color: $chalk-board;
 }
+
+p {
+  font-family: "Nunito";
+  font-weight: 100;
+  font-size: 14px;
+}
