--- a/sites/all/themes/chalkboard/sass/custom/_overall.scss
+++ b/sites/all/themes/chalkboard/sass/custom/_overall.scss
@@ -8,3 +8,20 @@ p {
   font-weight: 100;
   font-size: 14px;
 }
+
+.add_offering {
+  border: 4px solid black;
+  border-radius: 15px;
+  background: $chalk-red;
+  padding: 10px;
+}
+
+#block-block-1 {
+  a:link, a:visited {
+    color: white;
+    text-decoration: none;
+  }
+  a:hover {
+    background: $chalk-yellow;
+  }
+}
