--- a/sites/all/themes/chalkboard/sass/styles.scss
+++ b/sites/all/themes/chalkboard/sass/styles.scss
@@ -23,6 +23,7 @@
 @import "custom/page";
 @import "custom/overall";
 @import "custom/footer";
+@import "custom/view-tables";
 
 /* SMACSS theme rules */
 /* @import "theme-A"; */
